# 8sync

./: .gitignore  8sync.scm  Makefile.am  NEWS  README  README.md  README.org  bootstra.sh  configure.ac  guix.scm  loopy.scm  package.scm  tests.scm
8sync/: actors.scm  agenda.scm  daydream.scm  debug.scm  inbox.scm  ports.scm  repl.scm  rmeta-slot.scm
8sync/contrib/: base64.scm  sha-1.scm
8sync/systems/: actors.scm  define-method-star.scm  irc.scm  web-deprecated.scm  web.scm  websocket.scm
8sync/systems/actors/: debug.scm
8sync/systems/websocket/: client.scm  frame.scm  server.scm  utils.scm
demos/: hello-web.scm  irc.scm  ircbot.scm  run-demo.sh
demos/actors/: botherbotherbother.scm  robotscanner.scm  simplest-possible.scm
doc/: 8sync-new-manual.org  8sync.texi  Makefile.am
eightsync/: agenda.scm  repl.scm
eightsync/systems/: irc.scm
tests/: test-actors.scm  test-agenda.scm  test-rmeta-slot.scm  utils.scm
